# nuklear_gamepad

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  nuklear_gamepad.h  nuklear_gamepad_glfw.h  nuklear_gamepad_keyboard.h  nuklear_gamepad_mouse.h  nuklear_gamepad_none.h  nuklear_gamepad_pntr.h  nuklear_gamepad_raylib.h  nuklear_gamepad_sdl.h  nuklear_gamepad_sdl3.h  nuklear_gamepad_x11.h  nuklear_gamepad_xinput.h
.github/workflows/: build-and-test.yml
demo/common/: nuklear_gamepad_demo.c
demo/glfw/: Makefile  main.c
demo/none/: Makefile  main.c
demo/pntr/: CMakeLists.txt  Makefile  main.c
demo/pntr/.cmake/: Findlibretrocommon.cmake  Findlibretrodeps.cmake  Findpntr.cmake  Findpntr_app.cmake  Findpntr_app_starter.cmake  Findpntr_nuklear.cmake  Makefile.common  Makefile.libretro  README.md  shell.html
demo/raylib/: CMakeLists.txt  Makefile  main.c
demo/sdl/: Makefile  main.c
demo/sdl3/: Makefile  main.c
demo/xinput/: Makefile  main.c
platform/common/: nuklear_gamepad_demo.c
platform/sdl/: Makefile  main.c
test/: CMakeLists.txt  nuklear_gamepad_test.c
